[metadata]
name = laborFlow
version = 0.2.1
author = Zach Modig
author_email = zach.modig@gmail.com
description = Study Labor Flows with Remote Dynamics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/labor-flows/labor-flow-python-package
project_urls =
    Bug Tracker = https://gitlab.com/labor-flows/labor-flow-python-package/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
install_requires = 
    igraph >= 0.9.10
    numba >= 0.54.1
    numpy >= 1.20.3
    pandas >= 1.3.4
    tqdm >= 4.62.3
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src